--- a/css/styles.css
+++ b/css/styles.css
@@ -5093,6 +5093,28 @@ body .auto-slider-mini {
       line-height: 150%;
       text-align: center; }
 
+.read-more {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .read-more img {
+    margin-right: 5px;
+    -webkit-transition: none;
+    transition: none;
+    position: relative;
+    top: -2px; }
+  .read-more:hover {
+    color: #000; }
+    .read-more:hover img {
+      -webkit-filter: invert(60%) sepia(56%) saturate(563%) hue-rotate(359deg) brightness(119%) contrast(106%);
+              filter: invert(60%) sepia(56%) saturate(563%) hue-rotate(359deg) brightness(119%) contrast(106%); }
+
+.item-3x2 .item a .text p {
+  min-height: 59px; }
+
 /*-----------------------END-PAGE-TEACHING------------------------*/
 
 /*# sourceMappingURL=styles.css.map */
