--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -3520,6 +3520,9 @@ $green: #2B3D24;
   .popup-scientific .scientific-content ul li p{
     font-size: 16px;
   }
+  .item-3x2 .item a .text p{
+    min-height: inherit;
+  }
 }
 
 
