--- a/css/styles.css
+++ b/css/styles.css
@@ -4985,7 +4985,7 @@ body .auto-slider-mini {
         right: 0;
         bottom: 0;
         content: '';
-        background: rgba(0, 0, 0, 0.2); }
+        background: rgba(0, 0, 0, 0.3); }
       .item-3x2 .item a .text {
         position: absolute;
         bottom: 0;
@@ -5116,5 +5116,90 @@ body .auto-slider-mini {
   min-height: 59px; }
 
 /*-----------------------END-PAGE-TEACHING------------------------*/
+/*------------------------PAGE-FESTIVAL------------------------*/
+.festival {
+  padding: 0 0 17px !important; }
+  .festival .content-width {
+    position: relative; }
+  .festival .breadcrumb {
+    margin-bottom: 59px; }
+  .festival .h2 {
+    margin-bottom: 43px !important; }
+  .festival .info-orange {
+    margin-bottom: 5px; }
+    .festival .info-orange li {
+      border: 1px solid var(--orange-100-brand-color, #FF7900);
+      background: #FEF7F3; }
+  .festival .btn-wrap {
+    margin-bottom: 17px; }
+    .festival .btn-wrap a:first-child {
+      margin-right: 20px; }
+    .festival .btn-wrap a {
+      min-width: 215px; }
+  .festival p {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-bottom: 15px; }
+  .festival .read-more-festival {
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    color: #FF7900; }
+    .festival .read-more-festival img {
+      position: relative;
+      top: -2px; }
+    .festival .read-more-festival:hover {
+      color: #505A14; }
+  .festival .link-wrap {
+    margin-bottom: 30px; }
+  .festival .hide-block-festival {
+    display: none;
+    -webkit-column-count: 2;
+            column-count: 2;
+    -webkit-column-gap: 30px;
+            column-gap: 30px;
+    width: 100%; }
+
+.old-event-inner .info li {
+  display: inline-block;
+  margin: 0 12px 12px 0; }
+
+.item-3x2-logo {
+  padding: 10px 0 77px; }
+  .item-3x2-logo .item a:after {
+    display: none; }
+  .item-3x2-logo .item a {
+    height: 230px; }
+    .item-3x2-logo .item a .mini-logo {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      z-index: 3;
+      width: 50px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: end;
+          -ms-flex-pack: end;
+              justify-content: flex-end;
+      -webkit-box-align: end;
+          -ms-flex-align: end;
+              align-items: flex-end; }
+      .item-3x2-logo .item a .mini-logo img {
+        width: 100%;
+        vertical-align: top; }
+
+.festival-add .text {
+  width: 65%;
+  padding-top: 13px; }
+.festival-add .btn-wrap {
+  width: 29%; }
+.festival-add .content {
+  padding: 103px 53px 85px; }
+
+/*-----------------------END-PAGE-FESTIVAL------------------------*/
 
 /*# sourceMappingURL=styles.css.map */
