--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -5528,7 +5528,7 @@ body .auto-slider-mini{
         right: 0;
         bottom: 0;
         content: '';
-        background: rgba(#000, 0.2);
+        background: rgba(#000, 0.3);
       }
       .text{
         position: absolute;
@@ -5670,3 +5670,106 @@ body .auto-slider-mini{
   min-height: 59px;
 }
 /*-----------------------END-PAGE-TEACHING------------------------*/
+/*------------------------PAGE-FESTIVAL------------------------*/
+.festival{
+  padding: 0 0 17px!important;
+  .content-width{
+    position: relative;
+  }
+  .breadcrumb{
+    margin-bottom: 59px;
+  }
+  .h2{
+    margin-bottom: 43px!important;
+  }
+  .info-orange{
+    margin-bottom: 5px;
+    li{
+      border: 1px solid var(--orange-100-brand-color, #FF7900);
+      background: #FEF7F3;
+    }
+  }
+  .btn-wrap{
+    margin-bottom: 17px;
+    a:first-child{
+      margin-right: 20px;
+    }
+    a{
+      min-width: 215px;
+    }
+  }
+  p{
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-bottom: 15px;
+  }
+  .read-more-festival{
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%;
+    color: #FF7900;
+    img{
+      position: relative;
+      top: -2px;
+    }
+    &:hover{
+      color: #505A14;
+    }
+  }
+  .link-wrap{
+    margin-bottom: 30px;
+  }
+  .hide-block-festival{
+    display: none;
+    column-count: 2;
+    column-gap: 30px;
+    width: 100%;
+  }
+}
+.old-event-inner .info{
+  li{
+    display: inline-block;
+    margin: 0 12px 12px 0;
+  }
+}
+
+.item-3x2-logo{
+  padding: 10px 0 77px;
+  .item a:after{
+    display: none;
+  }
+  .item a{
+    height: 230px;
+    .mini-logo{
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      z-index: 3;
+      width: 50px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
+      img{
+        width: 100%;
+        vertical-align: top;
+      }
+    }
+  }
+}
+
+.festival-add{
+  .text{
+    width: 65%;
+    padding-top: 13px;
+  }
+  .btn-wrap{
+    width: 29%;
+  }
+  .content{
+    padding: 103px 53px 85px;
+  }
+}
+/*-----------------------END-PAGE-FESTIVAL------------------------*/
