--- a/css/styles.css
+++ b/css/styles.css
@@ -5200,6 +5200,11 @@ body .auto-slider-mini {
 .festival-add .content {
   padding: 103px 53px 85px; }
 
+.accordion-slider .accordion-thumb p:hover {
+  color: #FF7900; }
+  .accordion-slider .accordion-thumb p:hover:before {
+    color: #FF7900; }
+
 /*-----------------------END-PAGE-FESTIVAL------------------------*/
 
 /*# sourceMappingURL=styles.css.map */
